package fpt.project.NeoNHS.enums;

public enum BlogStatus {
    DRAFT,
    PUBLISHED,
    ARCHIVED
}
